Added the Restaurant Controller and Filter

--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Restaurants</title>
+    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<h1>restaurant</h1>
-<ul>
-    <li ng-repeat="place in places">
-        {{place}}
-    </li>
-</ul>
+<div style="height:100%; background-color: khaki">
+    <input type = "text" placeholder="Search Restaurant" style="width:100%" ng-model="filter" ng-change="updateMarkers()">
+    <ul class=" nav nav-pills nav-stacked" style="overflow-y: scroll; height:500px;">
+        <li role="presentation" ng-repeat="place in (filteredPlaces = (places | filter:filter))">
+            <a href="#">{{place}} </a>
+        </li>
+    </ul>
+</div>
 </body>
 </html>
