--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <title>Restaurants</title>
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 <body>
+
 <div style="height:100%; background-color: khaki">
-    <input type = "text" placeholder="Search Restaurant" style="width:100%" ng-model="filter" ng-change="updateMarkers()">
+
+    <input type="text" class="form-control" name="search" id="search" placeholder="search" ng-model="filter" ng-keyup="updateMarkers()">
     <ul class=" nav nav-pills nav-stacked" style="overflow-y: scroll; height:500px;">
-        <li role="presentation" ng-repeat="place in (filteredPlaces = (places | filter:filter))">
-            <a href="#">{{place}} </a>
+        <li id='{{place.name}}' data-toggle="collapse" data-target="#content_{{$index}}" aria-expanded="false" ng-repeat="place in (filteredPlaces = (placeDescriptionList | filter:filter))">
+            <a href="/neighborhood-map/index.html#/restaurants" ng-click="getContent()">{{place.name}} </a>
+            <div id ="content_{{$index}}" class="nav collapse" aria-labelledby="{{place.name}}">
+                <div class="star-ratings-sprite"><span style="width:{{20 * place.rating}}%" class="star-ratings-sprite-rating"></span></div>
+                 <br>
+                 <b> {{place.vicinity}} </b>
+            </div>
         </li>
     </ul>
 </div>
