Refactored the code:

--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -7,21 +7,44 @@
 
 </head>
 <body>
-
-<div style="height:100%; background-color: khaki">
-
-    <input type="text" class="form-control" name="search" id="search" placeholder="search" ng-model="filter" ng-keyup="updateMarkers()">
-    <ul class=" nav nav-pills nav-stacked" style="overflow-y: scroll; height:500px;">
-        <li id='{{place.name}}' data-toggle="collapse" data-target="#content_{{$index}}" aria-expanded="false" ng-repeat="place in (filteredPlaces = (placeDescriptionList | filter:filter))">
-            <a href="/neighborhood-map/index.html#/restaurants" ng-click="getContent()">{{place.name}} </a>
-            <div id ="content_{{$index}}" class="nav collapse" aria-labelledby="{{place.name}}">
-                <div class="star-ratings-sprite"><span style="width:{{20 * place.rating}}%" class="star-ratings-sprite-rating"></span></div>
-                 <br>
-                 <b> {{place.vicinity}} </b>
-                <hr>
+<div class="container">
+    <div class="row">
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">Neighbourhood Search</a>
+                </div>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><form style="margin-top: 10px;"> <input ng-model = "inputAddress" type="text"  name="search" id="search" placeholder="Enter City Name" required>
+                        <button ng-click= "goTo()" type="submit" class = "btn btn-primary btn-sm" >Search Again </button></form></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    <div class="row">
+        <div class="col-md-3">
+            <div style="height:100%; background-color: khaki">
+                <input type="text" class="form-control" name="search" id="search" placeholder="search" ng-model="filter"
+                       ng-keyup="updateMarkers()">
+                <ul class=" nav nav-pills nav-stacked" style="overflow-y: scroll; height:500px;">
+                    <li id='{{place.name}}' data-toggle="collapse" data-target="#content_{{$index}}" aria-expanded="false"
+                        ng-repeat="place in (filteredPlaces = (placeDescriptionList | filter:filter))">
+                        <a href="/neighborhood-map/index.html#/restaurants" ng-click="getContent($index)">{{place.name}} </a>
+                        <div id="content_{{$index}}" class="nav collapse" aria-labelledby="{{place.name}}">
+                            <div class="star-ratings-sprite"><span style="width:{{20 * place.rating}}%"
+                                                                   class="star-ratings-sprite-rating"></span></div>
+                            <br>
+                            <b> {{place.vicinity}} </b>
+                            <hr>
+                        </div>
+                    </li>
+                </ul>
             </div>
-        </li>
-    </ul>
+        </div>
+        <div class="col-md-9" id="googleMap" style="height:520px;"></div>
+    </div>
+
 </div>
+
 </body>
 </html>
