--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Restaurants</title>
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-
 </head>
 <body>
 <div class="container">
@@ -12,7 +11,7 @@
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a class="navbar-brand" href="#">Neighbourhood Search</a>
+                    <a class="navbar-brand">Neighbourhood Search</a>
                 </div>
                 <ul class="nav navbar-nav navbar-right">
                     <li><form style="margin-top: 10px;"> <input ng-model = "inputAddress" type="text"  name="search" id="search" placeholder="Enter City Name" required>
@@ -29,7 +28,7 @@
                 <ul class=" nav nav-pills nav-stacked" style="overflow-y: scroll; height:500px;">
                     <li id='{{place.name}}' data-toggle="collapse" data-target="#content_{{$index}}" aria-expanded="false"
                         ng-repeat="place in (filteredPlaces = (placeDescriptionList | filter:filter))">
-                        <a href="/neighborhood-map/index.html#/restaurants" ng-click="getContent($index)">{{place.name}} </a>
+                        <a ng-click="getContent($index)">{{place.name}} </a>
                         <div id="content_{{$index}}" class="nav collapse" aria-labelledby="{{place.name}}">
                             <div class="star-ratings-sprite"><span style="width:{{20 * place.rating}}%"
                                                                    class="star-ratings-sprite-rating"></span></div>
