--- a/templates/error.html
+++ b/templates/error.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Error</title>
 </head>
-<body ng-controller = "errorController">
-    <div class="jumbotron">
-        <h3>Something went wrong. Please try a different city.</h3>
-        <a ng-click="goToHomePage()" class="active">Go To Home</a>
-    </div>
+<body ng-controller="errorController">
+<div class="jumbotron">
+    <h3>Something went wrong. Please try a different city.</h3>
+    <a ng-click="goToHomePage()" class="active">Go To Home</a>
+</div>
 </body>
 </html>
